# naigama

./: .gitignore  Makefile  README.md  README.txt  copyright.c  instructions.pl
d/: Makefile  appendix_instr.tex  assembly.tex  bytecode.tex  compendium.tex  engine.tex  executables.tex  exp_namespaces.tex  expfeatures.tex  formats.tex  generate.pl  grammar.tex  instr_any.tex  instr_backcommit.tex  instr_call.tex  instr_catch.tex  instr_char.tex  instr_closecapture.tex  instr_commit.tex  instr_condjump.tex  instr_counter.tex  instr_end.tex  instr_endreplace.tex  instr_fail.tex  instr_failtwice.tex  instr_jump.tex  instr_maskedchar.tex  instr_opencapture.tex  instr_partialcommit.tex  instr_quad.tex  instr_range.tex  instr_replace.tex  instr_replacestring.tex  instr_ret.tex  instr_set.tex  instr_skip.tex  instr_span.tex  instr_startreplace.tex  instr_testany.tex  instr_testchar.tex  (+8 more)
d/pegpaper/: addition_counters.tex  addition_prefix.tex  assumptions.tex  (+10 more)
releasenotes/: 0.4.1.txt
src/: include  instructions.pl  lib
src/gen3/other/rust/naigama/assembler/: Cargo.toml
src/gen3/other/rust/naigama/assembler/src/: assembly.byc  bin.rs  lib.rs  naig_assembler.rs  naig_assembler_state.rs  naig_slotmap.rs
src/gen3/other/rust/naigama/compiler/: Cargo.toml
src/gen3/other/rust/naigama/compiler/src/: bin.rs  grammar.byc  grammar.slotmap  lib.rs  naig.rs  naig_compiler.rs  naig_compiler_options.rs  naig_compiler_set.rs  naig_compiler_state.rs  naig_slotmap.rs
src/gen3/other/rust/naigama/engine/: Cargo.toml
src/gen3/other/rust/naigama/engine/src/: bin.rs  instructions.rs  lib.rs  naig.rs  naig_captree.rs  naig_capture.rs  naig_engine.rs  naig_outcome.rs  naig_pinpoint.rs
src/gen3/other/rust/naigama/naigama/: Cargo.toml
src/gen3/other/rust/naigama/naigama/src/: constants.rs  instructions.rs  lib.rs  naig_error.rs  naigama.rs  test.rs
t/: Makefile  bitfault_00001.tst  bitfault_00100.tst  execute.sh  multi_00003.tst  multi_00005.tst  multi_00006.tst  multi_00009.tst  single_00002.tst  single_00003.tst  single_00004.tst  single_00005.tst  single_00007.tst  single_00008.tst  single_00009.tst  single_00010.tst  single_00011.tst  single_00013.tst  single_00014.tst  single_00015.tst  single_00016.tst  single_00017.tst  single_00018.tst
(+2015 files in other folders)
