[package]
name = "naigama_assembler"
version = "0.1.0"
authors = ["kees"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

"naigama_engine" = { path = "../engine" }

[lib]
name = "libnaia"
path = "src/lib.rs"

[[bin]]
name = "naia"
path = "src/bin.rs"
