[package]
name = "naigama_naigama"
version = "0.1.0"
authors = ["kees"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

"naigama_compiler" = { path = "../compiler" }
"naigama_assembler" = { path = "../assembler" }
"naigama_engine" = { path = "../engine" }
"naigama_global" = { path = "../global" }

[lib]
name = "libnaigama"
path = "src/lib.rs"
